--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="js/script.js" defer></script>
         <link rel="stylesheet" media="screen and (max-width: 800px)" href="css/mobile.css">
-        <link rel="stylesheet" media="screen and (min-width: 800px) and (max-width: 1500px)" href="css/mob_hrz.css"> -->
+        <link rel="stylesheet" media="screen and (min-width: 800px) and (max-width: 1500px)" href="css/mob_hrz.css">
             <!-- Fonte Awesome -->
         <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
     </head>
