--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="js/script.js" defer></script>
         <link rel="stylesheet" media="screen and (max-width: 800px)" href="css/mobile.css">
-        <link rel="stylesheet" media="screen and (min-width: 800px) and (max-width: 1500px)" href="css/mob_hrz.css">
+        <link rel="stylesheet" media="screen and (min-width: 801px) and (max-width: 1600px)" href="css/mob_hrz.css">
             <!-- Fonte Awesome -->
         <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
     </head>
@@ -41,13 +41,16 @@
                 </div>
 
                 <div class="alerta">
-                    <i class="fa-solid fa-circle-exclamation fa-2x collor-primary esclamacao"></i><p>Apenas letras minúsculas e sem acento!</a>
-                    <i class="fa-brands fa-figma fa-2x collor-primary"></i><a href="https://www.figma.com/file/tvFEYhVfZTjdJ5P24RGV21/Alura-Challenge---Desafio-1---Lógica?node-id=16%3A802" id="linkAlura">Alura Challenge.</a>
+                    <div class="alerta1"><i class="fa-solid fa-circle-exclamation fa-2x collor-primary"></i>
+                        </i><p>Apenas letras minúsculas e sem acento!</p>
+                    </div>
+                    <div class="alerta2"><i class="fa-brands fa-figma fa-2x collor-primary"></i><a href="https://www.figma.com/file/tvFEYhVfZTjdJ5P24RGV21/Alura-Challenge---Desafio-1---Lógica?ode-id=16%3A802" id="linkAlura">Alura Challenge.</a>
+                    </div>
                 </div>
 
                 <div id="botoes">
-                    <button class="btns" id="criptografar">encriptar</button>
-                    <button class="btns" id="descriptografar">decriptar</button>
+                    <button class="btns" id="criptografar">criptograr</button>
+                    <button class="btns" id="descriptografar">descriptografar</button>
                     <button class="btns" id="ctrlc">copia e cola</button>
                     <button class="btns" id="limp">Limpar</button>
                 </div>
