Alterações na responsividade

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="js/script.js" defer></script>
         <link rel="stylesheet" media="screen and (max-width: 800px)" href="css/mobile.css">
-        <link rel="stylesheet" media="screen and (min-width: 801px) and (max-width: 1600px)" href="css/mob_hrz.css">
+       <!--  <link rel="stylesheet" media="screen and (min-width: 801px) and (max-width: 1600px)" href="css/mob_hrz.css"> -->
             <!-- Fonte Awesome -->
         <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
     </head>
@@ -42,9 +42,9 @@
 
                 <div class="alerta">
                     <div class="alerta1"><i class="fa-solid fa-circle-exclamation fa-2x collor-primary"></i>
-                        </i><p>Apenas letras minúsculas e sem acento!</p>
+                        </i><p>&nbsp;Apenas letras minúsculas e sem acento!</p>
                     </div>
-                    <div class="alerta2"><i class="fa-brands fa-figma fa-2x collor-primary"></i><a href="https://www.figma.com/file/tvFEYhVfZTjdJ5P24RGV21/Alura-Challenge---Desafio-1---Lógica?ode-id=16%3A802" id="linkAlura">Alura Challenge.</a>
+                    <div class="alerta2"><i class="fa-brands fa-figma fa-2x collor-primary"></i><a href="https://www.figma.com/file/tvFEYhVfZTjdJ5P24RGV21/Alura-Challenge---Desafio-1---Lógica?ode-id=16%3A802" id="linkAlura">&nbsp;Alura Challenge.</a>
                     </div>
                 </div>
 
@@ -57,10 +57,10 @@
 
                 <div id="txtTec"><p>Tecnólogias utilizadas neste desafio.</p></div>
 
-                <div id="tecnologias">
-                    <i class="fa-brands fa-html5 fa-2x collor-primary"></i><p>HTML5</p>
-                    <i class="fa-brands fa-js fa-2x collor-primary"></i><p>CSS3</p>
-                    <i class="fa-brands fa-css3-alt fa-2x collor-primary"></i><p>JavaScript</p>
+                <div id="tecs">
+                    <div class="tec1"><i class="fa-brands fa-html5 fa-2x collor-primary"></i><p>&nbsp;HTML5</p></div>
+                    <div class="tec2"><i class="fa-brands fa-js fa-2x collor-primary"></i><p>&nbsp;JavaScript</p></div>
+                    <div class="tec3"><i class="fa-brands fa-css3-alt fa-2x collor-primary"></i><p>&nbsp;CSS3</p></div>
                 </div>
 
                 <footer>
