--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <header>
                 <div class="barraSuperior">
                     <picture>
-                        <source media="(max-width:800px )" srcset="/img/logoAluraLetraA.svg">
-                        <img src="/img/logoAluraG.svg" alt="">
+                        <source media="(max-width:800px )" srcset="img/logoAluraLetraA.svg">
+                        <img src="img/logoAluraG.svg" alt="">
                     </picture>      
                     <div id="th1"><h2 id="titulo">3ncr1pt4d0r</h2>
                     </div>
                     <picture>
-                        <source media="(max-width:800px )" srcset="/img/logoS9.svg">
-                        <img src="/img/logoEuclides.svg" alt="">
+                        <source media="(max-width:800px )" srcset="img/logoS9.svg">
+                        <img src="img/logoEuclides.svg" alt="">
                     </picture>
                 </div>
             </header>
