--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                     <div id="meusLinks"> 
                         <i class="fa-brands fa-linkedin-in fa-2x collor-primary"></i>
                         <i class="fa-brands fa-git-alt fa-2x collor-primary"></i>
+                        <a href="javascript:void(0)" onclick="share()">
+                            <img width="25" height="25" src="https://ayltoninacio.com.br/img/s/21w50.jpg" alt="">
+                        </a>
                     </div>
                 </div>
             </footer>
