--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
     <html lang="pt-BR">
 
-    <head>
+        <head>
+        <title>Criptografia</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Criptografia</title>
+        <meta property="og:image" content="https://oge.net/stories/_img/image-video/oge-image-trailer.png">
+        <meta property="og:image:type" content="image/png">
         <link rel="stylesheet" href="css/style.css">
-        <script src="js/script.js" defer></script>
         <link rel="stylesheet" media="screen and (max-width: 800px)" href="css/mobile.css">
-            <!-- Fonte Awesome -->
+        <!-- Fonte Awesome -->
         <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
+        <script src="js/script.js" defer></script>
     </head>
     <body>
         <main>
