--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:image" content="https://oge.net/stories/_img/image-video/oge-image-trailer.png">
-        <meta property="og:image:type" content="image/png">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" media="screen and (max-width: 800px)" href="css/mobile.css">
         <!-- Fonte Awesome -->
         <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
         <script src="js/script.js" defer></script>
+        <!-- tag property -->
+        <meta property="og:title" content="Encriptador de Texto">
+        <meta property="og:image" content="img/laptop.png">
+        <meta property="og:image:type" content="image/png">
+        <meta property="og:description" content="Projeto de Encriptador de texto sugerido pelo Alura Challenges">
     </head>
     <body>
         <main>
@@ -44,7 +47,9 @@
                 <div class="alerta1"><i class="fa-solid fa-circle-exclamation fa-2x collor-primary"></i>
                     </i><p>&nbsp;Apenas letras minúsculas e sem acento!</p>
                 </div>
-                <div class="alerta2"><i class="fa-brands fa-figma fa-2x collor-primary"></i><a href="https://www.figma.com/file/tvFEYhVfZTjdJ5P24RGV21/Alura-Challenge---Desafio-1---Lógica?ode-id=16%3A802" id="linkAlura">&nbsp;Alura Challenge.</a>
+                <div class="alerta2"><a href="javascript:void(0)" onclick="share()">
+                    <i class="fa-solid fa-share-nodes fa-2x" id="shareV"></i>
+                </a>
                 </div>
             </div>
 
@@ -58,9 +63,9 @@
             <div id="txtTec"><p>Tecnólogias utilizadas neste desafio.</p></div>
 
             <div id="tecs">
-                <div class="tec1"><i class="fa-brands fa-html5 fa-2x collor-primary"></i><p>&nbsp;HTML5</p></div>
-                <div class="tec2"><i class="fa-brands fa-js fa-2x collor-primary"></i><p>&nbsp;JavaScript</p></div>
-                <div class="tec3"><i class="fa-brands fa-css3-alt fa-2x collor-primary"></i><p>&nbsp;CSS3</p></div>
+                <div class="tec1"><i class="fa-brands fa-html5 fa-2x"></i><p>&nbsp;HTML5</p></div>
+                <div class="tec2"><i class="fa-brands fa-js fa-2x"></i><p>&nbsp;JavaScript</p></div>
+                <div class="tec3"><i class="fa-brands fa-css3-alt fa-2x"></i><p>&nbsp;CSS3</p></div>
             </div>
 
             <footer>
@@ -69,7 +74,7 @@
                         <i class="fa-brands fa-linkedin-in fa-2x collor-primary"></i>
                         <i class="fa-brands fa-git-alt fa-2x collor-primary"></i>
                         <a href="javascript:void(0)" onclick="share()">
-                            <img width="25" height="25" src="https://ayltoninacio.com.br/img/s/21w50.jpg" alt="">
+                            <i class="fa-solid fa-share-nodes fa-2x" id="share"></i>
                         </a>
                     </div>
                 </div>
