--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
         <script src="js/script.js" defer></script>
         <!-- tag property -->
-        <meta property="og:title" content="Encriptador de Texto">
-        <meta property="og:image" content="img/laptop.png">
+        <meta property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
         <meta property="og:image:type" content="image/png">
+        <meta property="og:title" content="Encriptador de Texto"/>
         <meta property="og:description" content="Projeto de Encriptador de texto sugerido pelo Alura Challenges">
     </head>
     <body>
