--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <meta property="og:image:height" content="405">
         <meta property="og:title" content="Encriptador de Texto">
         <meta property="og:description" content="Projeto de Encriptador de texto sugerido pelo Alura Challenges">
+        <meta property=”og:url” content="https://euclides981.github.io/criptografia">
     </head>
     <body>
         <main>
