--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <script src="js/script.js" defer></script>
         <!-- tag property -->
         <meta property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
-        <meta property="og:image:type" content="image/png">
+        <meta property="og:type" content="image/png">
         <meta property="og:image:width" content="660">
         <meta property="og:image:height" content="405">
         <meta property="og:title" content="Encriptador de Texto">
         <meta property="og:description" content="Projeto de Encriptador de texto sugerido pelo Alura Challenges">
-        <meta property=”og:url” content="https://euclides981.github.io/criptografia">
+        <meta property="og:url" content="https://euclides981.github.io/criptografia">
     </head>
     <body>
         <main>
