--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
         <script src="js/script.js" defer></script>
         <!-- tag property -->
-        <meta property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
+        <meta id="imagem" property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
         <meta property="og:type" content="image/png">
         <meta property="og:image:width" content="660">
         <meta property="og:image:height" content="405">
@@ -32,7 +32,7 @@
                     </div>
                     <picture>
                         <source media="(max-width:800px )" srcset="img/logoS9.svg">
-                        <img src="img/logoEuclides.svg" alt="">
+                        <img class="imagem8" src="img/logoEuclides.svg" alt="">
                     </picture>
                 </div>
             </header>
