--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <meta property="og:title" content="Encriptador de Texto">
         <meta property="og:description" content="Projeto de Encriptador de texto sugerido pelo Alura Challenges">
         <meta property="og:url" content="https://euclides981.github.io/criptografia">
+        <meta name="twitter:card" content="summary_large_image"></meta>
     </head>
     <body>
         <main>
