--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 
         <head>
         <title>Criptografia</title>
+        <meta id="imagem" property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
+        <meta property="og:type" content="image/png">
+        <meta property="og:image:width" content="660">
+        <meta property="og:image:height" content="405">
+        <meta property="og:title" content="Encriptador de Texto">
+        <meta property="og:description" content="Projeto de Encriptador de texto sugerido pelo Alura Challenges">
+        <meta property="og:url" content="https://euclides981.github.io/criptografia">
+        <meta name="twitter:card" content="summary_large_image">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,14 +20,6 @@
         <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
         <script src="js/script.js" defer></script>
         <!-- tag property -->
-        <meta id="imagem" property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
-        <meta property="og:type" content="image/png">
-        <meta property="og:image:width" content="660">
-        <meta property="og:image:height" content="405">
-        <meta property="og:title" content="Encriptador de Texto">
-        <meta property="og:description" content="Projeto de Encriptador de texto sugerido pelo Alura Challenges">
-        <meta property="og:url" content="https://euclides981.github.io/criptografia">
-        <meta name="twitter:card" content="summary_large_image"></meta>
     </head>
     <body>
         <main>
