--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
         <head>
         <title>Criptografia</title>
-        <meta id="imagem" property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
+        <!-- tag property -->
+        <meta property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
         <meta property="og:type" content="image/png">
         <meta property="og:image:width" content="660">
         <meta property="og:image:height" content="405">
         <meta property="og:title" content="Encriptador de Texto">
-        <meta property="og:description" content="Projeto de Encriptador de texto sugerido pelo Alura Challenges">
+        <meta name="description" property="og:description" content="Encriptador de texto sugerido pelo Alura Challenges">
         <meta property="og:url" content="https://euclides981.github.io/criptografia">
         <meta name="twitter:card" content="summary_large_image">
         <meta charset="UTF-8">
@@ -19,7 +20,7 @@
         <!-- Fonte Awesome -->
         <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
         <script src="js/script.js" defer></script>
-        <!-- tag property -->
+        
     </head>
     <body>
         <main>
