--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:image:width" content="660">
         <meta property="og:image:height" content="405">
         <meta property="og:title" content="Encriptador de Texto">
-        <meta name="description" property="og:description" content="Encriptador de texto sugerido pelo Alura Challenges">
+        <meta name="description" property="og:description" content="[Encriptador de texto sugerido pelo Alura Challenges]">
         <meta property="og:url" content="https://euclides981.github.io/criptografia">
         <meta name="twitter:card" content="summary_large_image">
         <meta charset="UTF-8">
