--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
     <html lang="pt-BR">
 
         <head>
-        <title>Criptografia</title>
+        <title>ENCRIPTADOR</title>
         <!-- tag property -->
         <meta property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
         <meta property="og:type" content="image/png">
         <meta property="og:image:width" content="660">
         <meta property="og:image:height" content="405">
-        <meta property="og:title" content="Encriptador de Texto">
-        <meta name="description" property="og:description" content="[Encriptador de texto sugerido pelo Alura Challenges]">
+        <meta property="og:title" content="Encriptador de Texto - JavaScript">
+        <meta property="og:description" content="Encriptador de Texto - Alura Challenges">
         <meta property="og:url" content="https://euclides981.github.io/criptografia">
         <meta name="twitter:card" content="summary_large_image">
         <meta charset="UTF-8">
