--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:image:width" content="660">
         <meta property="og:image:height" content="405">
         <meta property="og:title" content="Encriptador de Texto - JavaScript">
-        <meta property="og:description" content="Encriptador de Texto - Alura Challenges">
+        <meta property="og:description" content="Encriptador de Texto Feito em JavaScript - Esse Projeto faz Parte do Curso de Programação da Alura em Parceria com A Oracle">
         <meta property="og:url" content="https://euclides981.github.io/criptografia">
         <meta name="twitter:card" content="summary_large_image">
         <meta charset="UTF-8">
