Remoção dos Alerts

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html lang="pt-BR">
 
-        <head>
+    <head>
         <title>ENCRIPTADOR</title>
         <!-- tag property -->
         <meta property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
@@ -20,7 +20,6 @@
         <!-- Fonte Awesome -->
         <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
         <script src="js/script.js" defer></script>
-        
     </head>
     <body>
         <main>
@@ -30,14 +29,15 @@
                         <source media="(max-width:800px )" srcset="img/logoAluraLetraA.svg">
                         <img src="img/logoAluraG.svg" alt="">
                     </picture>      
-                    <div id="th1"><h2 id="titulo">3ncr1pt4d0r</h2>
-                    </div>
+                    <div id="th1"><h2 class="typing-animation" id="titulo">3ncr1pt4d0r</h2></div>
                     <picture>
                         <source media="(max-width:800px )" srcset="img/logoS9.svg">
                         <img class="imagem8" src="img/logoEuclides.svg" alt="">
                     </picture>
                 </div>
             </header>
+            
+            <div id="aviso">&nbsp;</div>
 
             <div class="txt">
                 <div class="txt1">
