--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:image:width" content="660">
         <meta property="og:image:height" content="405">
         <meta property="og:title" content="Encriptador de Texto - JavaScript">
-        <meta property="og:description" content="Encriptador de Texto Feito em JavaScript - Esse Projeto faz Parte do Curso de Programação da Alura em Parceria com A Oracle">
+        <meta property="og:description" content="Encriptador de Texto Feito em JavaScript - Esse Projeto faz Parte do Curso de Programação da Alura / Oracle">
         <meta property="og:url" content="https://euclides981.github.io/criptografia">
         <meta name="twitter:card" content="summary_large_image">
         <meta charset="UTF-8">
@@ -17,9 +17,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" media="screen and (max-width: 800px)" href="css/mobile.css">
-        <!-- Fonte Awesome -->
-        <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
-        <script src="js/script.js" defer></script>
+       
     </head>
     <body>
         <main>
@@ -27,12 +25,12 @@
                 <div class="barraSuperior">
                     <picture>
                         <source media="(max-width:800px )" srcset="img/logoAluraLetraA.svg">
-                        <img src="img/logoAluraG.svg" alt="">
+                        <img src="img/logoAluraG.svg" alt="Alura">
                     </picture>      
                     <div id="th1"><h2 class="typing-animation" id="titulo">3ncr1pt4d0r</h2></div>
                     <picture>
                         <source media="(max-width:800px )" srcset="img/logoS9.svg">
-                        <img class="imagem8" src="img/logoEuclides.svg" alt="">
+                        <img class="imagem8" src="img/logoEuclides.svg" alt="euclides981">
                     </picture>
                 </div>
             </header>
@@ -86,4 +84,9 @@
             </footer>
         </main>
     </body>
+     <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
+     <script src="js/script.js" defer></script>
+     <script src="js/btns-copiar-limpar.js" defer></script>
+     <script src="js/criptografar.js" defer></script>
+     <script src="js/descriptografar.js" defer></script>
 </html>
