--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <div class="txt">
                 <div class="txt1">
-                    <textarea class="txts" rows="15" id="entrada" placeholder="Digite o texto aqui"></textarea>
+                    <textarea class="txts" rows="15" id="entrada" placeholder="Digite o texto aqui" autofocus="true"></textarea>
                 </div>
                 <div class="txt2">
                     <textarea class="txts" rows="15" id="saida" placeholder="Saída Criptografada" disabled></textarea>
