--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="pt-BR">
 
     <head>
-        <title>ENCRIPTADOR</title>
+        <title>ENCRIPTADOR &nbsp;&nbsp;&nbsp;&nbsp/></title>
         <!-- tag property -->
         <meta property="og:image" content="https://euclides981.github.io/criptografia/img/laptop.png">
         <meta property="og:type" content="image/png">
@@ -17,6 +17,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" media="screen and (max-width: 800px)" href="css/mobile.css">
+        <link rel="icon" type="image/x-icon" href="img/favicon.svg">
        
     </head>
     <body>
@@ -29,12 +30,12 @@
                     </picture>      
                     <div id="th1"><h2 class="typing-animation" id="titulo">3ncr1pt4d0r</h2></div>
                     <picture>
-                        <source media="(max-width:800px )" srcset="img/logoS9.svg">
-                        <img class="imagem8" src="img/logoEuclides.svg" alt="euclides981">
+                        <source media="(max-width:800px )" srcset="img/euclides_p.svg">
+                        <img class="imagem8" src="img/euclides.svg" alt="euclides981">
                     </picture>
                 </div>
             </header>
-            
+
             <div id="aviso">&nbsp;</div>
 
             <div class="txt">
@@ -85,8 +86,9 @@
         </main>
     </body>
      <script src="https://kit.fontawesome.com/e801e4a6d3.js" crossorigin="anonymous"></script>
-     <script src="js/script.js" defer></script>
      <script src="js/btns-copiar-limpar.js" defer></script>
      <script src="js/criptografar.js" defer></script>
      <script src="js/descriptografar.js" defer></script>
+     <script src="ignore/replace.js" defer></script>
+
 </html>
