--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
                         <source media="(max-width:800px )" srcset="img/logoAluraLetraA.svg">
                         <img src="img/logoAluraG.svg" alt="Alura">
                     </picture>      
-                    <div id="th1"><h2 class="typing-animation" id="titulo">3ncr1pt4d0r</h2></div>
-                    <picture>
-                        <source media="(max-width:800px )" srcset="img/euclides_p.svg">
-                        <img class="imagem8" src="img/euclides.svg" alt="euclides981">
-                    </picture>
+                        <div id="th1"><h2 class="typing-animation" id="titulo">3ncr1pt4d0r</h2>
+                        </div>
+                    <a href="https://euclides981.github.io/" target="blank">
+                        <picture>
+                            <source media="(max-width:800px )" srcset="img/euclides_p.svg">
+                            <img class="imagem8" src="img/euclides.svg" alt="euclides981">
+                        </picture>
+                    </a>
                 </div>
             </header>
 
@@ -75,11 +78,9 @@
             <footer>
                 <div class="barraInferior">
                     <div id="meusLinks"> 
-                        <i class="fa-brands fa-linkedin-in fa-2x collor-primary"></i>
-                        <i class="fa-brands fa-git-alt fa-2x collor-primary"></i>
-                        <a href="javascript:void(0)" onclick="share()">
-                            <i class="fa-solid fa-share-nodes fa-2x" id="share"></i>
-                        </a>
+                            <a href="https://www.linkedin.com/in/euclides981/" target="blank"><i class="fa-brands fa-linkedin-in fa-2x corBranca"></i></a>
+                            <a href="https://euclides981.github.io/" target="blank"><i class="fa-brands fa-git-alt fa-2x corBranca"></i></a>
+                            <a href="javascript:void(0)" onclick="share()"><i class="fa-solid fa-share-nodes fa-2x corBranca"></i></a>
                     </div>
                 </div>
             </footer>
@@ -89,6 +90,5 @@
      <script src="js/btns-copiar-limpar.js" defer></script>
      <script src="js/criptografar.js" defer></script>
      <script src="js/descriptografar.js" defer></script>
-     <script src="ignore/replace.js" defer></script>
 
 </html>
