--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" media="screen and (max-width: 800px)" href="css/mobile.css">
         <link rel="icon" type="image/x-icon" href="img/favicon.svg">
