Alterações na Resposividade

--- a/index.html
+++ b/index.html
@@ -51,29 +51,33 @@
                 </div>
             </div>
 
-            <div class="alerta">
-                <div class="alerta1"><i class="fa-solid fa-circle-exclamation fa-2x collor-primary"></i>
-                    </i><p>&nbsp;Apenas letras minúsculas e sem acento!</p>
+                <div id="troca">
+                <div class="alerta">
+                    <div class="alerta1"><i class="fa-solid fa-circle-exclamation fa-2x collor-primary"></i>
+                        </i><p>&nbsp;Apenas letras minúsculas e sem acento!</p>
+                    </div>
+                    <div class="alerta2"><a href="javascript:void(0)" onclick="share()">
+                        <i class="fa-solid fa-share-nodes fa-2x" id="shareV"></i>
+                    </a>
+                    </div>
                 </div>
-                <div class="alerta2"><a href="javascript:void(0)" onclick="share()">
-                    <i class="fa-solid fa-share-nodes fa-2x" id="shareV"></i>
-                </a>
+
+                <div id="botoes">
+                    <button class="btns" id="criptografar">criptografar</button>
+                    <button class="btns" id="descriptografar">descriptografar</button>
+                    <button class="btns" id="ctrlc">copia e cola</button>
+                    <button class="btns" id="limp">Limpar</button>
                 </div>
             </div>
 
-            <div id="botoes">
-                <button class="btns" id="criptografar">criptografar</button>
-                <button class="btns" id="descriptografar">descriptografar</button>
-                <button class="btns" id="ctrlc">copia e cola</button>
-                <button class="btns" id="limp">Limpar</button>
-            </div>
+            <hr>
 
-            <div id="txtTec"><p>Tecnólogias utilizadas neste desafio.</p></div>
+            <div id="txtTec"><p>Tecnólogias utilizadas neste desafio</p></div>
 
             <div id="tecs">
-                <div class="tec1"><i class="fa-brands fa-html5 fa-2x"></i><p>&nbsp;HTML5</p></div>
-                <div class="tec2"><i class="fa-brands fa-js fa-2x"></i><p>&nbsp;JavaScript</p></div>
-                <div class="tec3"><i class="fa-brands fa-css3-alt fa-2x"></i><p>&nbsp;CSS3</p></div>
+                <div class="tec"><i class="fa-brands fa-html5 fa-2x"></i><p>HTML5</p></div>
+                <div class="tec"><i class="fa-brands fa-js fa-2x"></i><p>JavaScript</p></div>
+                <div class="tec"><i class="fa-brands fa-css3-alt fa-2x"></i><p>CSS3</p></div>
             </div>
 
             <footer>
