--- a/index.html
+++ b/index.html
@@ -54,13 +54,17 @@
 
             <div id="txt">
 
+                <div></div>
+
                 <div>
-                    <textarea class="txts" rows="15" id="entrada" placeholder="Digite o texto aqui" autofocus="true"></textarea>
+                    <textarea class="txts" rows="15" id="entrada" placeholder="Digite o texto aqui" autofocus="true" required></textarea>
                 </div>
 
                 <div>
                     <textarea class="txts" rows="15" id="saida" placeholder="Saída Criptografada" disabled></textarea>
                 </div>
+
+                <div></div>
 
             </div>
 
