--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="https://euclides981.github.io/" target="_blank">
                         <picture>
                             <source media="(max-width:800px )" srcset="img/euclides_p.svg">
-                            <img class="imagem8" src="img/euclides.svg" alt="euclides981">
+                            <img src="img/euclides.svg" alt="euclides981">
                         </picture>
                     </a>
                 
@@ -72,7 +72,7 @@
 
                 <div id="alerta">
 
-                    <div id="alerta1"><i class="fa-solid fa-circle-exclamation fa-2x collor-primary"></i>
+                    <div id="alerta1"><i class="fa-solid fa-circle-exclamation fa-2x"></i>
                         </i><p>&nbsp;Apenas letras minúsculas e sem acento!</p>
                     </div>
 
