--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Euclides G S">
         <title>ENCRIPTADOR &nbsp;&nbsp;&nbsp;&nbsp/></title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
@@ -15,6 +16,7 @@
         <meta property="og:type" content="image/png">
         <meta property="og:image:width" content="660">
         <meta property="og:image:height" content="405">
+        <meta property="og:image:alt" content="Encriptador de Textos">
         <meta property="og:title" content="Encriptador de Texto - JavaScript">
         <meta property="og:description" content="Encriptador de Texto Feito em JavaScript - Esse Projeto faz Parte do Curso de Programação da Alura / Oracle">
         <meta property="og:url" content="https://euclides981.github.io/criptografia">
