--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div id="alerta">
 
                     <div id="alerta1"><i class="fa-solid fa-circle-exclamation fa-2x"></i>
-                        </i><p>&nbsp;Apenas letras minúsculas e sem acento!</p>
+                        </i><p>&nbsp;Apenas letras minúsculas e sem Acento!</p>
                     </div>
 
                     <div id="alerta2">
