--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <footer>
                 <div id="meusLinks"> 
                     <a href="https://www.linkedin.com/in/euclides981/" target="_blank"><i class="fa-brands fa-linkedin-in fa-2x corBranca"></i></a>
-                    <a href="https://euclides981.github.io/" target="_blank"><i class="fa-brands fa-git-alt fa-2x corBranca"></i></a>
+                    <a href="https://github.com/euclides981" target="_blank"><i class="fa-brands fa-git-alt fa-2x corBranca"></i></a>
                     <a href="javascript:void(0)" onclick="share()"><i class="fa-solid fa-share-nodes fa-2x corBranca"></i></a>
                 </div>
             </footer>
