--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </picture>
                     </a>
                     <div id="th1"><h2 class="typing-animation" id="titulo">3ncr1pt4d0r</h2></div>
-                    <a href="https://euclides981.github.io/" target="_blank">
+                    <a href="https://github.com/euclides981" target="_blank">
                         <picture>
                             <source media="(max-width:800px )" srcset="img/euclides_p.svg">
                             <img src="img/euclides.svg" alt="euclides981">
