Melhorias nos Códigos

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     </div>
                 </div>
                 <div id="botoes">
-                    <button class="btns" id="criptografar">criptografar</button>
-                    <button class="btns" id="descriptografar">descriptografar</button>
-                    <button class="btns" id="ctrlc">copia e cola</button>
-                    <button class="btns" id="limp">Limpar</button>
+                    <button onclick="encriptar()" class="btns">criptografar</button>
+                    <button onclick="descriptar()" class="btns">descriptografar</button>
+                    <button onclick="copiaECola()" class="btns">copia e cola</button>
+                    <button onclick="limpeza()" class="btns">Limpar</button>
                 </div>
             </div>
             <hr>
